syntax = "proto3";

package download;

option go_package = "schema/download";

message MasterDownloadRequest {
    string file_name = 1;
}

message IPPort {
    string ip = 1;
    string port = 2;
}
message MasterDownloadResponse {
    repeated IPPort ip_ports = 1;
    uint64 file_size = 2;
}

message ChunkDownloadRequest {
    string file_name = 1;
    uint64 start_byte = 2;
    uint64 end_byte = 3;
}
message ChunkDownloadResponse {
    bytes chunk = 1;
}
service DownloadService {
    rpc RequestDownloadInfo(MasterDownloadRequest) returns (MasterDownloadResponse);
    rpc DownloadChunk(ChunkDownloadRequest) returns (stream ChunkDownloadResponse);
}